# ssregpros

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
configs/: baseline-data-augmentation.yaml
experiments/: __init__.py
experiments/example/: .gitignore  README.md  config.yaml  main.py
experiments/histo_mri/: README.md  config.yaml  data-augmentation.yaml  main.py
experiments/hyperparameter_sweep/: config.yaml  main.py  sweep.yaml
scripts/: build_docker.sh  extract_histo_mri_corrs.py  gif_maker.py  run_docker.sh
scripts/GIFs/: .gitignore
scripts/Histo-MRI/: .gitignore  extract.py
ssregpros/: __init__.py
ssregpros/core/: __init__.py  correspondence.py  mri_axis.py  type_definitions.py
ssregpros/datasets/fake_histo_mri/: fake_histo_mri.py
ssregpros/datasets/histo_mri/: __init__.py  histo_mri.py
ssregpros/datasets/prostate_fused_mri_pathology/: prostate_fused_mri_pathology.py
ssregpros/datasets/sample_histo_mri/: sample_histo_mri.py
ssregpros/loss/: __init__.py  boundary_heatmap.py  composite.py  lncc.py  mask_leakage.py  ncc.py  principal_axis.py  sdf.py  sobel.py
ssregpros/models/: feature_encoder.py  registration.py  regression.py  segmentor.py  spatial_transformer.py
ssregpros/regularisation/: rigid_transform.py
ssregpros/training/: checkpointer.py  data_augmentation.py  dataloader.py  dataset.py  early_stopping.py  icebreaker.py  qualitative.py  scheduler.py  segmentation_manager.py  trainer.py  utils.py
ssregpros/training/logging/: __init__.py  base_logger.py  noop_logger.py  wandb_logger.py
ssregpros/transforms/: histology.py  mri.py  preprocessor.py  shared.py
tests/loss/: test_ncc.py  test_sobel.py
tests/training/: test_early_stopping.py  test_scheduler.py
