[project]
name = "ssregpros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "kornia>=0.8.1",
    "monai[nibabel, openslide, pydicom, skimage]==1.5.0", # https://github.com/Project-MONAI/MONAI/issues/8599
    "nibabel>=5.3.2",
    "numpy>=2.0.0,<2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas[excel]>=2.3.1",
    "pyyaml>=6.0.2",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.138.16",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 80
target-version = ["py311"]
skip-string-normalization = false

[[tool.mypy.overrides]]
module = ["torchvision.*"]
follow_untyped_imports = true
